--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 django = "^5.1.1"
 psycopg2-binary = "^2.9.9"
 dj-database-url = "^2.2.0"
+whitenoise = {extras = ["brotli"], version = "^6.7.0"}
+python-decouple = "^3.8"
+gunicorn = "^23.0.0"
 
 
 [build-system]
